tests/rosetta/out/Rust/averages-pythagorean-means.error
rustc error: exit status 1
error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/TestMochiRustGoldenaverages-pythagorean-means3773984260/001/prog.rs:33:23
   |
33 |             let f = n.parse::<f64>().unwrap();
   |                       ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
31 |         let mut n: i32 = 1;
   |                  +++++

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverages-pythagorean-means3773984260/001/prog.rs:44:72
   |
44 |         println!("{}", format!("{}{}", "A >= G >= H: ", a >= g && g >= h.to_string()));
   |                                                                   -    ^^^^^^^^^^^^^ expected `f64`, found `String`
   |                                                                   |
   |                                                                   expected because this is `f64`
   |
help: try removing the method call
   |
44 -         println!("{}", format!("{}{}", "A >= G >= H: ", a >= g && g >= h.to_string()));
44 +         println!("{}", format!("{}{}", "A >= G >= H: ", a >= g && g >= h));
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0689.
For more information about an error, try `rustc --explain E0308`.
